--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       <input type="number" id="number"/>
       <input type="submit" value="Submit"/>
     </form>
+    <h3 id="number-checked"></h3>
     <h3 id="result"></h3>
   </body>
 </html>
